tavi - location list page with table and map

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongodb=mongodb+srv://akilahimaja:04rimTI3yhR7pH7d@crimeradar.xnh2z.mongodb.net/CrimeDB?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://akilahimaja:04rimTI3yhR7pH7d@crimeradar.xnh2z.mongodb.net/CrimeDB?retryWrites=true&w=majority
