--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7"
   }
 }
