--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^8.12.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfkit": "^0.16.0"
   }
 }
